--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -8,8 +8,13 @@
 /* ----------------------------------------------
  * General
  ---------------------------------------------- */
+@font-face {
+	font-family: 'Cafe24Ssurround';
+	src: url('../fonts/Cafe24Ssurround.ttf');
+}
+
 body {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 	color: #444444;
 }
 
@@ -29,7 +34,8 @@ h3,
 h4,
 h5,
 h6 {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
+	margin-bottom: 1rem;
 }
 
 /* ----------------------------------------------
@@ -52,6 +58,7 @@ h6 {
 }
 
 #header .logo h1 {
+	font-family: 'Cafe24Ssurround';
 	font-size: 28px;
 	margin: 0;
 	padding: 0;
@@ -68,7 +75,7 @@ h6 {
 #header .logo img {
 	padding: 0;
 	margin: 0;
-	max-height: 40px;
+	max-height: 38px;
 }
 
 /* ----------------------------------------------
@@ -99,7 +106,7 @@ h6 {
 	padding: 10px 0 10px 30px;
 	font-size: 15px;
 	font-weight: 500;
-	font-family: 'Poppins', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 	color: rgba(255, 255, 255, 0.7);
 	white-space: nowrap;
 	transition: 0.3s;
@@ -166,7 +173,7 @@ h6 {
 	right: 0;
 	left: 0;
 	bottom: 0;
-	background: rgba(1, 3, 91, 0.9);
+	background: rgba(91, 136, 226, 0.9);
 	transition: 0.3s;
 	z-index: 999;
 }
@@ -199,13 +206,13 @@ h6 {
 .navbar-mobile a:focus {
 	padding: 10px 20px;
 	font-size: 15px;
-	color: #0205a1;
+	color: #5b88e2;
 }
 
 .navbar-mobile a:hover,
 .navbar-mobile .active,
 .navbar-mobile li:hover > a {
-	color: #3f43fd;
+	color: #5b88e2;
 }
 
 .navbar-mobile .getstarted,
@@ -237,8 +244,8 @@ section {
 	margin: 0 0 5px 0;
 	letter-spacing: 2px;
 	text-transform: uppercase;
-	color: #aaaaaa;
-	font-family: 'Poppins', sans-serif;
+	color: #f0f0ff;
+	font-family: 'Noto Sans KR', sans-serif;
 }
 
 .section-title h2::after {
@@ -246,7 +253,7 @@ section {
 	width: 120px;
 	height: 1px;
 	display: inline-block;
-	background: #1acc8d;
+	background: #fe9f9f;
 	margin: 4px 10px;
 }
 
@@ -256,8 +263,8 @@ section {
 	font-size: 36px;
 	font-weight: 700;
 	text-transform: uppercase;
-	font-family: 'Poppins', sans-serif;
-	color: #010483;
+	font-family: 'Noto Sans KR', sans-serif;
+	color: #fff;
 }
 
 /* ----------------------------------------------
@@ -265,7 +272,6 @@ section {
  ---------------------------------------------- */
 #home {
 	width: 100%;
-	/* background: url('../img/home-bg.jpg'); */
 	position: relative;
 	padding: 120px 0 0 0;
 }
@@ -284,33 +290,32 @@ section {
 	margin: 0 0 20px 0;
 	font-size: 48px;
 	font-weight: 700;
-	line-height: 56px;
-	color: rgba(255, 255, 255, 0.8);
-}
-
-#home h1 {
-	margin: 0 0 20px 0;
-	font-size: 48px;
-	font-weight: 700;
-	line-height: 56px;
+	line-height: 68px;
 	color: rgba(255, 255, 255, 0.8);
 }
 
 #home h1 span {
+	font-family: 'Cafe24Ssurround';
 	color: #fff;
 	border-bottom: 4px solid #fe9f9f;
+	font-size: 58px;
 }
 
 #home h2 {
 	color: rgba(255, 255, 255, 0.8);
 	margin-bottom: 40px;
-	font-size: 24px;
+	font-size: 22px;
+}
+
+#home .home-txt div div:last-child {
+	margin-bottom: 30px;
 }
 
 #home .btn-get-started {
-	font-family: 'Montserrat', sans-serif;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-weight: 500;
 	font-size: 16px;
+	line-height: 24px;
 	letter-spacing: 1px;
 	display: inline-block;
 	padding: 10px 30px;
@@ -318,6 +323,7 @@ section {
 	transition: 0.5s;
 	color: #fff;
 	background: #fe9f9f;
+	margin-bottom: 5px;
 }
 
 #home .btn-get-started:hover {
@@ -355,8 +361,12 @@ section {
 
 	#home h1 {
 		font-size: 28px;
-		line-height: 32px;
-		margin-bottom: 10px;
+		line-height: 42px;
+		margin-bottom: 20px;
+	}
+
+	#home h1 span {
+		font-size: 38px;
 	}
 
 	#home h2 {
@@ -367,6 +377,10 @@ section {
 }
 
 @media (max-width: 575px) {
+	#home {
+		text-align: justify;
+	}
+
 	#home .home-img img {
 		width: 80%;
 	}
@@ -395,13 +409,21 @@ section {
 /* ----------------------------------------------
  * Details Section
  ---------------------------------------------- */
+.content {
+	align-items: center;
+}
+
 .details .content + .content {
 	margin-top: 100px;
 }
 
+.details .content .col-md-8 {
+	/* padding-left: 10px; */
+}
+
 .details .content h3 {
 	font-weight: 600;
-	font-size: 26px;
+	font-size: 36px;
 	color: #5b88e2;
 }
 
@@ -415,26 +437,60 @@ section {
 }
 
 .details .content ul i {
-	font-size: 20px;
+	font-size: 22px;
 	padding-right: 4px;
 	color: #fe9f9f;
+}
+
+.details .content p {
+	font-size: 22px;
 }
 
 .details .content p:last-child {
 	margin-bottom: 0;
 }
 
+@media (min-width: 1250px) {
+	.px-5 {
+		padding-right: 10rem !important;
+	}
+}
+
+@media (max-width: 575px) {
+	.details .content h3 {
+		text-align: center;
+		font-size: 28px;
+	}
+
+	.details .content p {
+		text-align: justify;
+		font-size: 14px;
+	}
+
+	.details .content ul i {
+		font-size: 14px;
+	}
+
+	.details .content ul li {
+		font-size: 12px;
+	}
+}
+
 /* ----------------------------------------------
  * Contact Section
  ---------------------------------------------- */
+.contact {
+	background: #5b88e2;
+}
+
 .contact .info {
 	width: 100%;
-	background: #fff;
+	margin-left: 0px;
 }
 
 .contact .info i {
 	font-size: 20px;
-	color: #3f43fd;
+	color: #5b88e2;
 	float: left;
 	width: 44px;
 	height: 44px;
@@ -451,14 +507,14 @@ section {
 	font-size: 22px;
 	font-weight: 600;
 	margin-bottom: 5px;
-	color: #010483;
+	color: #fff;
 }
 
 .contact .info p {
 	padding: 0 0 0 60px;
 	margin-bottom: 0;
 	font-size: 14px;
-	color: #0205a1;
+	color: #f0f0ff;
 }
 
 .contact .info .address,
@@ -471,14 +527,14 @@ section {
  * Footer
  ---------------------------------------------- */
 #footer {
-	background: #010351;
+	background: #5b88e2;
 	padding: 0 0 30px 0;
-	color: #fff;
+	color: #f0f0ff;
 	font-size: 14px;
 }
 
 #footer .copyright {
-	border-top: 1px solid #010479;
+	border-top: 1px solid #f0f0ff;
 	text-align: center;
 	padding-top: 30px;
 }
@@ -487,7 +543,7 @@ section {
 	padding-top: 10px;
 	text-align: center;
 	font-size: 13px;
-	color: #fff;
+	color: #f0f0ff;
 }
 
 /*-----------------------------------------------
